Remove refresh button and add saved cookies sectionaaaaaaaa

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     <div class="container">
         <h1>IP Logger</h1>
         <p>Your data will be collected and analyzed.</p>
-        <button id="refresh-btn" onclick="refresh()">Refresh Data</button>
         <div class="info-section">
             <h2>Collected Data</h2>
             <div class="data-item"><strong>IP Address:</strong> <span id="ip"></span></div>
@@ -72,6 +71,7 @@
             <div class="data-item"><strong>Round Trip Time:</strong> <span id="rtt"></span></div>
             <div class="data-item"><strong>Save Data:</strong> <span id="saveData"></span></div>
             <div class="data-item"><strong>VPN/PROXY:</strong> <span id="vpn"></span></div>
+            <div class="data-item"><strong>Saved Cookies:</strong> <span id="savedCookies"></span></div>
         </div>
     </div>
 
