--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="data-item"><strong>Round Trip Time:</strong> <span id="rtt"></span></div>
             <div class="data-item"><strong>Save Data:</strong> <span id="saveData"></span></div>
             <div class="data-item"><strong>VPN/PROXY:</strong> <span id="vpn"></span></div>
-            <div class="data-item"><strong>Saved Cookies:</strong> <span id="savedCookies"></span></div>
+            <div class="data-item" id="savedCookiesContainer"><strong>Saved Cookies:</strong> <span id="savedCookies"></span></div>
         </div>
     </div>
 
